[package]
name = "app-3d-printer"
authors = [""]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

eframe = "0.22.0"
env_logger = "0.10"
reqwest = { version = "0.11.22", features = ["blocking"] }

[package.metadata.deb]
depends = ''
assets = [
  [
    "app-3d-printer.desktop",
    "/home/ab/.local/share/applications/",
    "755",
  ],
]
