[package]
name = "ender-3-wifi"
version = "0.1.0"
authors = ["ab"]
edition = "2021"
resolver = "2"
rust-version = "1.66"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

default = ["all", "hal", "esp-idf-sys/native"]

all = ["std", "nightly"]
hal = ["esp-idf-hal", "embedded-svc", "esp-idf-svc"]
std = [
  "alloc",
  "esp-idf-sys/std",
  "esp-idf-sys/binstart",
  "embedded-svc?/std",
  "esp-idf-hal?/std",
  "esp-idf-svc?/std",
]
alloc = ["embedded-svc?/alloc", "esp-idf-hal?/alloc", "esp-idf-svc?/alloc"]
nightly = [
  "embedded-svc?/nightly",
  "esp-idf-svc?/nightly",
] # Future: "esp-idf-hal?/nightly"

[dependencies]
embedded-sdmmc = "0.5.0"
postcard = { version = "1.0.8", features = ["alloc"] }
serde = { version = "1.0.*", default-features = false }

log = { version = "0.4.17", default-features = false }
esp-idf-sys = { version = "0.33", default-features = false }
esp-idf-hal = { version = "0.42.4", optional = true, default-features = false }
esp-idf-svc = { version = "0.47.2", optional = true, default-features = false }
embedded-svc = { version = "0.26.2", optional = true, default-features = false }
embedded-hal = { version = "0.2.7" }
enumset = "1.1.2"
nb = "1.1.0"

[build-dependencies]
embuild = "0.31.2"
