[package]
name = "esp32-openocd-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

# [profile.dev.package.esp-wifi]
# opt-level = 3

[dependencies]
esp32_hal = { package = "esp32-hal", version = "0.18.0", features = [
  "embassy",
  "embassy-time-timg0",
  "embassy-executor-thread",
  # "embassy-executor-interrupt",
  # "interrupt-preemption",
  "async",
] }
esp-println = { version = "0.9.0", features = ["esp32"] }
esp-wifi = { version = "0.3.0", features = [
  "esp32",
  "wifi",
  "async",
  "embassy-net",
] }
embedded-svc = { version = "0.27.0", default-features = false, features = [] }

critical-section = "1.1.2"
static_cell = { version = "2.0.0", features = ["nightly"] }


embassy-executor = { version = "0.5.0", features = [
  "nightly",
  "integrated-timers",
] }
embassy-net = { version = "0.4.0", features = [
  "tcp",
  "proto-ipv4",
  "dhcpv4",
  "dns",
] }
embassy-time = "0.3.0"

heapless = { version = "0.8.0", default-features = false }
