[package]
name = "esp32c3-openocd-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[profile.dev.package.esp-wifi]
opt-level = 3

[dependencies]
esp32c3_hal = { package = "esp32c3-hal", version = "0.15.0", features = [
  "embassy",
  "embassy-time-timg0",
  "embassy-executor-thread",
  # "embassy-executor-interrupt",
  # "interrupt-preemption",
  "async",
] }
esp-println = { version = "0.9.0", features = ["esp32c3"] }
# esp-wifi = { version = "0.3.0", features = ["esp32c3", "wifi"] }

critical-section = "1.1.2"
static_cell = { version = "2.0.0", features = ["nightly"] }

embassy-executor = { version = "0.5.0", features = ["nightly"] }
embassy-time = "0.3.0"
