[package]
name = "spherebot-firmware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = "s"

[profile.release]
debug = true
opt-level = 3

[profile.dev.package.esp-wifi]
opt-level = 3

[dependencies]
esp32_hal = { package = "esp32-hal", version = "0.18.1", features = [
  "eh1",
  "embassy",
  "embassy-time-timg0",
  "embassy-executor-thread",
  "embassy-executor-interrupt",
  # "interrupt-preemption",
  "async",
] }
esp-println = { version = "0.9.0", features = ["esp32", "log"] }
esp-wifi = { version = "0.3.0", features = [
  "esp32",
  "wifi",
  "async",
  "embassy-net",
] }
esp-alloc = { version = "0.3.0" }

embedded-svc = { version = "0.27.1", default-features = false, features = [] }
embedded-io-async = { version = "0.6.1" }

# esp-backtrace = { version = "0.11.0", features = [
#   "esp32",
#   "panic-handler",
#   "println",
# ] }

critical-section = "1.1.2"
static_cell = { version = "2.0.0", features = ["nightly"] }

embassy-executor = { version = "0.5.0", features = [
  "nightly",
  "integrated-timers",
] }
embassy-net = { version = "0.4.0", features = [
  "tcp",
  "proto-ipv4",
  "dhcpv4",
  "dns",
  "udp",
] }
embassy-time = "0.3.0"
embassy-sync = "0.5.0"

heapless = { version = "0.8.0", default-features = false }

log = { version = "0.4.21" }

smoltcp = { version = "0.11.0", features = ["alloc"], default-features = false }

embedded-hal = { version = "1.0.0" }
embedded-io = { version = "0.6.1" }

bit_field = "0.10.2"
